Fixed page layout issues

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -17,7 +17,7 @@ $footer-text-size: .9em;
 body {
   background: $background-color;
   color: $body-text-color;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', serif;
   font-size: $body-text-size;
   line-height: 1.35em;
   text-align: center;
@@ -52,8 +52,8 @@ header .site-title {
 }
 
 section, footer {
-  width: 600px;
-  margin: auto;
+  width: auto;
+  margin: 50px;
   text-align: left;
 }
 
@@ -89,7 +89,7 @@ div.signup iframe {
  */
  footer {
   border-top:1px solid $border-color;
-  margin:2em auto;
+  //margin:2em auto;
   p {
     font-size: .7em;
     line-height: 1.15em;
